--- a/crypto/keys/Cargo.toml
+++ b/crypto/keys/Cargo.toml
@@ -13,6 +13,7 @@ ed25519 = { version = "1.0.0-pre.4", default-features = false, features = ["serd
 failure = { version = "0.1.5", default-features = false, features = ["derive"] }
 hex_fmt = "0.3"
 mc-util-from-random = { path = "../../util/from-random" }
+mc-util-repr-bytes = { path = "../../util/repr-bytes" }
 mc-util-serial = { path = "../../util/serial", default-features = false }
 prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
 rand_core = { version = "0.5", default-features = false }
@@ -20,7 +21,7 @@ signature = { version = "1.0.0-pre.5", default-features = false, features = ["di
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 sha2 = { version = "0.8", default-features = false }
 x25519-dalek = { version = "0.6", default-features = false, features = ["nightly", "u64_backend"] }
-zeroize = { version = "0.10", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
 curve25519-dalek = { version = "2.0", default-features = false, features = ["simd_backend", "nightly"] }
