--- a/crypto/noise/Cargo.toml
+++ b/crypto/noise/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
 mc-util-from-random = { path = "../../util/from-random" }
+mc-util-repr-bytes = { path = "../../util/repr-bytes" }
 
 aes-gcm = "0.3"
 aead = "0.2"
