--- a/transaction/core/Cargo.toml
+++ b/transaction/core/Cargo.toml
@@ -39,6 +39,7 @@ mc-crypto-digestible = { path = "../../crypto/digestible", features = ["dalek"] 
 mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
 mc-crypto-rand = { path = "../../crypto/rand" }
 mc-util-from-random = { path = "../../util/from-random" }
+mc-util-repr-bytes = { path = "../../util/repr-bytes" }
 mc-util-serial = { path = "../../util/serial" }
 
 [target.'cfg(target_feature = "avx2")'.dependencies]
