--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ members = [
     "util/logger-macros",
     "util/metered-channel",
     "util/metrics",
+    "util/repr-bytes",
     "util/serial",
     "util/test-helper",
     "util/uri",
